--- a/templates/base.html
+++ b/templates/base.html
@@ -9,12 +9,14 @@
   <link rel="apple-touch-icon-precomposed" href="{{STATIC_URL}}/static/apple-touch-icon-precomposed.png">
 
   {# css #}
-  {% comment %} <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.2/css/bulma.min.css"> {% endcomment %}
-  <link href="{% static 'bulma.min.css' %}" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@1.0.0/css/bulma.min.css">
+  {% comment %} <link href="{% static 'bulma.min.css' %}" rel="stylesheet"> {% endcomment %}
   <link href="{% static 'mycss/mycss.css' %}" rel="stylesheet">
-  {% comment %} <link rel="preconnect" href="https://fonts.googleapis.com">
+  {% comment %}
+  <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400;700&display=swap" rel="stylesheet"> {% endcomment %}
+  <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400;700&display=swap" rel="stylesheet">
+  {% endcomment %}
   <title>{% block title %}ソフィア・ガーデンズ川崎{% endblock %}</title>
   {% block head %}
   {% endblock %}
@@ -28,18 +30,18 @@
   {% endblock %}
   <br>
   <!-- contents -->
-  <div class="container with_mobile">
+  <div class="container is-fluid">
   <main>
     <div class="columns">
       <!-- 本体 -->
-      <div class="column is-9 ">
+      <div class="column is-four-fifths ">
         {% block content %}
         {% endblock %}
       </div>
       <!-- 右サイド -->
-      <div class="column is-3">
+      <div class="column">
         <div class="content">
-          <table class="table is-bordered">
+          <table class="table is-bordered is-fullwidth">
             <thead>
               <tr class="has-background-dark">
                 <th class="has-text-centered has-text-white">文書資料</th>
