--- a/templates/base_single_page.html
+++ b/templates/base_single_page.html
@@ -7,12 +7,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="shortcut icon" type="image/png" href="{{STATIC_URL}}/static/favicon.ico"/>
   {# css #}
-  {% comment %} <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.2/css/bulma.min.css"> {% endcomment %}
-  <link href="{% static 'bulma.min.css' %}" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@1.0.0/css/bulma.min.css">
+  {% comment %} <link href="{% static 'bulma.min.css' %}" rel="stylesheet"> {% endcomment %}
   <link href="{% static 'mycss/mycss.css' %}" rel="stylesheet">
-  {% comment %} <link rel="preconnect" href="https://fonts.googleapis.com">
+  {% comment %}
+  <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400;700&display=swap" rel="stylesheet"> {% endcomment %}
+  <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400;700&display=swap" rel="stylesheet">
+  {% endcomment %}
   <title>{% block title %}ソフィア・ガーデンズ川崎{% endblock %}</title>
   {% block head %}
   {% endblock %}
