--- a/templates/base.html
+++ b/templates/base.html
@@ -30,7 +30,7 @@
   {% endblock %}
   <br>
   <!-- contents -->
-  <div class="container is-fluid">
+  <div class="container">
   <main>
     <div class="columns">
       <!-- 本体 -->
