--- a/information/templates/information/mobile_information.html
+++ b/information/templates/information/mobile_information.html
@@ -31,14 +31,14 @@
 {% block content %}
 <section class="hero is-dark">
   <div class="hero-body">
-    <div class="content has-text-centered">
-      <h4 class="title">ソフィア・ガーデンズ川崎</h4>
-      <h5 class="subtitle">マンション情報</h5>
+    <div class="has-text-centered">
+      <div class="title is-size-4">ソフィア・ガーデンズ川崎</div>
+      <div class="subtitle">マンション情報</div>
     </div>
   </div>
 </section>
 <br>
-<div class="container">
+<div class="mobile_container">
   {% for item in information_list %}
     <div class="card content">
       <header class="card-header">
