--- a/overview/templates/overview/overview_mobile.html
+++ b/overview/templates/overview/overview_mobile.html
@@ -40,52 +40,52 @@
     <table class="table is-narrow is-responsible">
       <tbody>
         <tr>
-          <td class="has-text-left has-background-grey-lighter">建築確認認可年月</td>
+          <td class="has-text-centered has-background-grey-lighter has-text-black">建築確認認可年月</td>
         </tr>
         <tr>
-          <td class="has-text-centered">{{ov.kenchiku_kakunin}}</td>
+          <td class="has-text-left">{{ov.kenchiku_kakunin}}</td>
         </tr>
         <tr>
-          <td class="has-text-left has-background-grey-lighter">竣工年</td>
+          <td class="has-text-centered has-background-grey-lighter has-text-black">竣工年</td>
         </tr>
         <tr>
-          <td class="has-text-centered">{{ov.shunkou}} 年</td>
+          <td class="has-text-left">{{ov.shunkou}} 年</td>
         </tr>
         <tr>
-          <td class="has-text-left has-background-grey-lighter">総戸数</td>
+          <td class="has-text-centered has-background-grey-lighter has-text-black">総戸数</td>
         </tr>
         <tr>
-          <td class="has-text-centered">{{ov.soukosu}} 戸</td>
+          <td class="has-text-left">{{ov.soukosu}} 戸</td>
         </tr>
         <tr>
-          <td class="has-text-left has-background-grey-lighter">構造</td>
+          <td class="has-text-centered has-background-grey-lighter has-text-black">構造</td>
         </tr>
         <tr>
-          <td class="has-text-centered">{{ov.kouzou}}</td>
+          <td class="has-text-left">{{ov.kouzou}}</td>
         </tr>
         <tr>
-          <td class="has-text-left has-background-grey-lighter">平置き駐車場</td>
+          <td class="has-text-centered has-background-grey-lighter has-text-black">平置き駐車場</td>
         </tr>
         <tr>
-          <td class="has-text-centered">{{ov.flat_parking}} 台</td>
+          <td class="has-text-left">{{ov.flat_parking}} 台</td>
         </tr>
         <tr>
-          <td class="has-text-left has-background-grey-lighter">機械式駐車場</td>
+          <td class="has-text-centered has-background-grey-lighter has-text-black">機械式駐車場</td>
         </tr>
         <tr>
-          <td class="has-text-centered">{{ov.machine_parking}} 台</td>
+          <td class="has-text-left">{{ov.machine_parking}} 台</td>
         </tr>
         <tr>
-          <td class="has-text-left has-background-grey-lighter">駐輪場</td>
+          <td class="has-text-centered has-background-grey-lighter has-text-black">駐輪場</td>
         </tr>
         <tr>
-          <td class="has-text-centered">{{ov.bicycle_parking}} 台</td>
+          <td class="has-text-left">{{ov.bicycle_parking}} 台</td>
         </tr>
         <tr>
-          <td class="has-text-left has-background-grey-lighter">バイク置場</td>
+          <td class="has-text-centered has-background-grey-lighter has-text-black">バイク置場</td>
         </tr>
         <tr>
-          <td class="has-text-centered">{{ov.bike_parking}} 台</td>
+          <td class="has-text-left">{{ov.bike_parking}} 台</td>
         </tr>
       </tbody>
     </table>
@@ -93,52 +93,52 @@
     <table class="table is-narrow is-responsible">
       <tbody>
         <tr>
-          <td class="has-text-left has-background-grey-lighter">敷地面積</td>
+          <td class="has-text-centered has-background-grey-lighter has-text-black">敷地面積</td>
         </tr>
         <tr>
-          <td class="has-text-centered">{{ov.site_area|intcomma}} m2</td>
+          <td class="has-text-left">{{ov.site_area|intcomma}} m2</td>
         </tr>
         <tr>
-          <td class="has-text-left has-background-grey-lighter">容積率</td>
+          <td class="has-text-centered has-background-grey-lighter has-text-black">容積率</td>
         </tr>
         <tr>
-          <td class="has-text-centered">{{ov.floor_area_ratio}} %</td>
+          <td class="has-text-left">{{ov.floor_area_ratio}} %</td>
         </tr>
         <tr>
-          <td class="has-text-left has-background-grey-lighter">建築面積</td>
+          <td class="has-text-centered has-background-grey-lighter has-text-black">建築面積</td>
         </tr>
         <tr>
-          <td class="has-text-centered">{{ov.building_area|intcomma}} m2</td>
+          <td class="has-text-left">{{ov.building_area|intcomma}} m2</td>
         </tr>
         <tr>
-          <td class="has-text-left has-background-grey-lighter">建ぺい率</td>
+          <td class="has-text-centered has-background-grey-lighter has-text-black">建ぺい率</td>
         </tr>
         <tr>
-          <td class="has-text-centered">{{ov.building_coverage_ratio}} %</td>
+          <td class="has-text-left">{{ov.building_coverage_ratio}} %</td>
         </tr>
         <tr>
-          <td class="has-text-left has-background-grey-lighter">延べ床面積</td>
+          <td class="has-text-centered has-background-grey-lighter has-text-black">延べ床面積</td>
         </tr>
         <tr>
-          <td class="has-text-centered">{{ov.total_floor_area|intcomma}} m2</td>
+          <td class="has-text-left">{{ov.total_floor_area|intcomma}} m2</td>
         </tr>
         <tr>
-          <td class="has-text-left has-background-grey-lighter">容積対象面積</td>
+          <td class="has-text-centered has-background-grey-lighter has-text-black">容積対象面積</td>
         </tr>
         <tr>
-          <td class="has-text-centered">{{ov.volume_target_area|intcomma}} m2</td>
+          <td class="has-text-left">{{ov.volume_target_area|intcomma}} m2</td>
         </tr>
         <tr>
-          <td class="has-text-left has-background-grey-lighter">基準階階高</td>
+          <td class="has-text-centered has-background-grey-lighter has-text-black">基準階階高</td>
         </tr>
         <tr>
-          <td class="has-text-centered">{{ov.standard_floor_height}} m</td>
+          <td class="has-text-left">{{ov.standard_floor_height}} m</td>
         </tr>
         <tr>
-          <td class="has-text-left has-background-grey-lighter">最高高さ</td>
+          <td class="has-text-centered has-background-grey-lighter has-text-black">最高高さ</td>
         </tr>
         <tr>
-          <td class="has-text-centered">{{ov.max_height}} m</td>
+          <td class="has-text-left">{{ov.max_height}} m</td>
         </tr>
       </tbody>
     </table>
@@ -146,40 +146,40 @@
     <table class="table is-narrow is-responsible">
       <tbody>
         <tr>
-          <td class="has-text-left has-background-grey-lighter">用途地域</td>
+          <td class="has-text-centered has-background-grey-lighter has-text-black">用途地域</td>
         </tr>
         <tr>
-          <td class="has-text-centered">{{ov.youto_chiiki}}</td>
+          <td class="has-text-left">{{ov.youto_chiiki}}</td>
         </tr>
         <tr>
-          <td class="has-text-left has-background-grey-lighter">指定容積率</td>
+          <td class="has-text-centered has-background-grey-lighter has-text-black">指定容積率</td>
         </tr>
         <tr>
-          <td class="has-text-centered">{{ov.specified_floor_area_ratio}} %</td>
+          <td class="has-text-left">{{ov.specified_floor_area_ratio}} %</td>
         </tr>
         <tr>
-          <td class="has-text-left has-background-grey-lighter">防火地域</td>
+          <td class="has-text-centered has-background-grey-lighter has-text-black">防火地域</td>
         </tr>
         <tr>
-          <td class="has-text-centered">{{ov.bouka_chiiki}}</td>
+          <td class="has-text-left">{{ov.bouka_chiiki}}</td>
         </tr>
         <tr>
-          <td class="has-text-left has-background-grey-lighter">指定建ぺい率</td>
+          <td class="has-text-centered has-background-grey-lighter has-text-black">指定建ぺい率</td>
         </tr>
         <tr>
-          <td class="has-text-centered">{{ov.specified_building_coverage_ratio}} %</td>
+          <td class="has-text-left">{{ov.specified_building_coverage_ratio}} %</td>
         </tr>
         <tr>
-          <td class="has-text-left has-background-grey-lighter">高度制限</td>
+          <td class="has-text-centered has-background-grey-lighter has-text-black">高度制限</td>
         </tr>
         <tr>
-          <td class="has-text-centered">{{ov.height_limit}}</td>
+          <td class="has-text-left">{{ov.height_limit}}</td>
         </tr>
         <tr>
-          <td class="has-text-left has-background-grey-lighter">必要駐車場台数</td>
+          <td class="has-text-centered has-background-grey-lighter has-text-black">必要駐車場台数</td>
         </tr>
         <tr>
-          <td class="has-text-centered">{{ov.required_parking}}</td>
+          <td class="has-text-left">{{ov.required_parking}}</td>
         </tr>
       </tbody>
     </table>
@@ -187,46 +187,46 @@
     <table class="table is-narrow is-responsible">
       <tbody>
         <tr>
-          <td class="has-text-left has-background-grey-lighter">専有部給水設備</td>
+          <td class="has-text-centered has-background-grey-lighter has-text-black">専有部給水設備</td>
         </tr>
         <tr>
-          <td class="has-text-centered">{{ov.private_water_equipment}}</td>
+          <td class="has-text-left">{{ov.private_water_equipment}}</td>
         </tr>
         <tr>
-          <td class="has-text-left has-background-grey-lighter">共用部給水設備</td>
+          <td class="has-text-centered has-background-grey-lighter has-text-black">共用部給水設備</td>
         </tr>
         <tr>
-          <td class="has-text-centered">{{ov.public_water_equipment}}</td>
+          <td class="has-text-left">{{ov.public_water_equipment}}</td>
         </tr>
         <tr>
-          <td class="has-text-left has-background-grey-lighter">共用部エントランス</td>
+          <td class="has-text-centered has-background-grey-lighter has-text-black">共用部エントランス</td>
         </tr>
         <tr>
-          <td class="has-text-centered">{{ov.entrance}}</td>
+          <td class="has-text-left">{{ov.entrance}}</td>
         </tr>
         <tr>
-          <td class="has-text-left has-background-grey-lighter">防犯カメラ</td>
+          <td class="has-text-centered has-background-grey-lighter has-text-black">防犯カメラ</td>
         </tr>
         <tr>
-          <td class="has-text-centered">{{ov.security}}</td>
+          <td class="has-text-left">{{ov.security}}</td>
         </tr>
         <tr>
-          <td class="has-text-left has-background-grey-lighter">トランクルーム</td>
+          <td class="has-text-centered has-background-grey-lighter has-text-black">トランクルーム</td>
         </tr>
         <tr>
-          <td class="has-text-centered">{{ov.trunk_room}}</td>
+          <td class="has-text-left">{{ov.trunk_room}}</td>
         </tr>
         <tr>
-          <td class="has-text-left has-background-grey-lighter">宅配ボックス</td>
+          <td class="has-text-centered has-background-grey-lighter has-text-black">宅配ボックス</td>
         </tr>
         <tr>
-          <td class="has-text-centered">{{ov.delivery_box}}</td>
+          <td class="has-text-left">{{ov.delivery_box}}</td>
         </tr>
         <tr>
-          <td class="has-text-left has-background-grey-lighter">インターネット</td>
+          <td class="has-text-centered has-background-grey-lighter has-text-black">インターネット</td>
         </tr>
         <tr>
-          <td class="has-text-centered">{{ov.network}}</td>
+          <td class="has-text-left">{{ov.network}}</td>
         </tr>
       </tbody>
     </table>
