--- a/register/templates/register/menu_mobile.html
+++ b/register/templates/register/menu_mobile.html
@@ -31,9 +31,9 @@
 {% block content %}
 <section class="hero is-dark">
   <div class="hero-body">
-    <div class="content has-text-centered">
-      <h4 class="title"> ソフィア・ガーデンズ川崎 </h4>
-      <h5 class="subtitle">管理組合 メニュー</h5>
+    <div class="has-text-centered">
+      <div class="title is-size-4"> ソフィア・ガーデンズ川崎 </div>
+      <div class="subtitle is-size-6">管理組合 メニュー</div>
     </div>
   </div>
 </section>
