--- a/information/templates/information/pc_information.html
+++ b/information/templates/information/pc_information.html
@@ -31,9 +31,9 @@
 {% block content %}
 <section class="hero is-dark">
   <div class="hero-body">
-    <div class="container has-text-centered">
-      <h1 class="title">ソフィア・ガーデンズ川崎</h1>
-      <h4 class="subtitle">マンション情報</h4>
+    <div class="has-text-centered">
+      <div class="title">ソフィア・ガーデンズ川崎</div>
+      <div class="subtitle">マンション情報</div>
     </div>
   </div>
 </section>
@@ -42,7 +42,7 @@
   {% for item in information_list %}
     <div class="card content">
       <header class="card-header">
-        <p class="card-header-title has-background-grey has-text-white">
+        <p class="card-header-title has-background-black has-text-white">
           {{item.title}}
         </p>
       </header>
