--- a/notice/templates/notice/news_card_pc.html
+++ b/notice/templates/notice/news_card_pc.html
@@ -69,12 +69,11 @@
 {% endblock navbar %}
 
 {% block header %}
-{% comment %} <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.15.6/styles/a11y-dark.min.css"> {% endcomment %}
 <section class="hero is-dark">
   <div class="hero-body">
-    <div class="container has-text-centered">
-      <h1 class="title"> ソフィア・ガーデンズ川崎 </h1>
-      <h4 class="subtitle">管理組合 ホームページ</h4>
+    <div class="has-text-centered">
+      <div class="title">ソフィア・ガーデンズ川崎 </div>
+      <div class="subtitle">管理組合 ホームページ</div>
     </div>
   </div>
 </section>
@@ -84,7 +83,7 @@
 {% for news in news_list %}
 <div class="card content">
   <header class="card-header">
-    <p class="card-header-title has-background-dark has-text-white">{{news.title}}</p>
+    <div class="card-header-title has-background-dark has-text-white">{{news.title}}</div>
   </header>
   <p>{{ news.created_at | date }}</p>
   <div class="card-content markdown table is-bordered">
