--- a/notice/templates/notice/search_list.html
+++ b/notice/templates/notice/search_list.html
@@ -26,9 +26,9 @@
 {% block header %}
 <section class="hero is-dark">
   <div class="hero-body">
-    <div class="container has-text-centered">
-      <h1 class="title"> ソフィア・ガーデンズ川崎 </h1>
-      <h4 class="subtitle"> 管理組合 電子データ </h4>
+    <div class="has-text-centered">
+      <div class="title"> ソフィア・ガーデンズ川崎 </div>
+      <div class="subtitle"> 管理組合 電子データ </div>
     </div>
   </div>
 </section>
