--- a/register/templates/register/menu_pc.html
+++ b/register/templates/register/menu_pc.html
@@ -31,9 +31,9 @@
 {% block content %}
 <section class="hero is-dark">
   <div class="hero-body">
-    <div class="container has-text-centered">
-      <h1 class="title"> ソフィア・ガーデンズ川崎 </h1>
-      <h4 class="subtitle">管理組合 メニュー</h4>
+    <div class="has-text-centered">
+      <div class="title"> ソフィア・ガーデンズ川崎 </div>
+      <div class="subtitle">管理組合 メニュー</div>
     </div>
   </div>
 </section>
