--- a/notice/templates/notice/news_card_mobile.html
+++ b/notice/templates/notice/news_card_mobile.html
@@ -52,7 +52,7 @@
 {% endblock navbar %}
 
 {% block header %}
-<section class="hero is-dark">
+<section class="hero is-small is-dark">
   <div class="hero-body">
     <div class="has-text-centered">
       <div class="title is-size-4">ソフィア・ガーデンズ川崎</div>
