menuのリンク先を修正

--- a/register/templates/register/menu_pc.html
+++ b/register/templates/register/menu_pc.html
@@ -82,7 +82,8 @@
     </div>
     <div class="column is-2">
       <div class="menubox has-text-centered">
-        <a href="https://repairplan.sophiagardens.org" target="_blank" class="white_color">修繕計画</a>
+        {% comment %} <a href="https://repairplan.sophiagardens.org" target="_blank" class="white_color">修繕計画</a> {% endcomment %}
+        <a href="https://facility.sophiagardens.org" target="_blank" class="white_color">修繕計画</a>
       </div>
     </div>
     <div class="column is-3">
