個別住居データ関連のデータ削除

--- a/register/templates/register/menu_pc.html
+++ b/register/templates/register/menu_pc.html
@@ -42,7 +42,7 @@
 <div class="container with_mobile">
 <section class="sectionbox">
   <div class="is-size-5 has-text-weight-bold">
-  <p>インフォメーション</p>
+  <p>公開情報</p>
   </div>
   <br>
   <div class="columns">
@@ -56,17 +56,12 @@
         <a href="{% static 'pamphlet.pdf' %}" target="_blank" class="white_color">パンフレット</a>
       </div>
     </div>
-    <div class="column is-2">
-      <div class="menubox has-text-centered">
-        <a href="https://facility.sophiagardens.org/parking/fig/" target="_blank" class="white_color">駐車場空き状況</a>
-      </div>
-    </div>
   </div>
 </section>
 <hr>
 <section class="sectionbox">
   <div class="is-size-5 has-text-weight-bold">
-  <p>管理組合専用</p>
+  <p>管理組合専用（ログイン必要）</p>
   </div>
   <br>
   <div class="columns">
@@ -77,13 +72,12 @@
     </div>
     <div class="column is-2">
       <div class="menubox has-text-centered">
-        <a href="https://facility.sophiagardens.org" target="_blank" class="white_color">設備台帳</a>
+        <a href="https://facility.sophiagardens.org/parking/fig/" target="_blank" class="white_color">駐車場空き状況</a>
       </div>
     </div>
-    <div class="column is-2">
+    <div class="column is-3">
       <div class="menubox has-text-centered">
-        {% comment %} <a href="https://repairplan.sophiagardens.org" target="_blank" class="white_color">修繕計画</a> {% endcomment %}
-        <a href="https://facility.sophiagardens.org" target="_blank" class="white_color">修繕計画</a>
+        <a href="https://facility.sophiagardens.org" target="_blank" class="white_color">共用設備・修繕計画</a>
       </div>
     </div>
     <div class="column is-3">
