--- a/register/templates/register/menu_mobile.html
+++ b/register/templates/register/menu_mobile.html
@@ -42,23 +42,13 @@
 <div class="container with_mobile">
 <section class="sectionbox">
   <div class="is-size-5 has-text-weight-bold">
-  <p>インフォメーション</p>
+  <p>公開情報</p>
   </div>
   <br>
   <div class="columns">
     <div class="column">
       <div class="menubox has-text-centered">
         <a href="{% url 'overview:overview' %}" class="white_color">マンション概要</a>
-      </div>
-    </div>
-    <div class="column">
-      <div class="menubox has-text-centered">
-        <a class="white_color" href="https://keijiban.sophiagardens.org" target="_blank">掲示板</a>
-      </div>
-    </div>
-    <div class="column">
-      <div class="menubox has-text-centered">
-        <a class="white_color" href="https://calendar.sophiagardens.org" target="_blank">カレンダー</a>
       </div>
     </div>
     <div class="column">
@@ -82,12 +72,17 @@
     </div>
     <div class="column">
       <div class="menubox has-text-centered">
-        <a href="https://facility.sophiagardens.org" target="_blank" class="white_color">設備台帳</a>
+        <a href="https://facility.sophiagardens.org" target="_blank" class="white_color">共用設備・修繕計画</a>
       </div>
     </div>
     <div class="column">
       <div class="menubox has-text-centered">
-        <a href="https://repairplan.sophiagardens.org" target="_blank" class="white_color">修繕計画</a>
+        <a class="white_color" href="https://keijiban.sophiagardens.org" target="_blank">掲示板</a>
+      </div>
+    </div>
+    <div class="column">
+      <div class="menubox has-text-centered">
+        <a class="white_color" href="https://calendar.sophiagardens.org" target="_blank">カレンダー</a>
       </div>
     </div>
     <div class="column">
