駐車場空き情報をメニューから削除

--- a/register/templates/register/menu_pc.html
+++ b/register/templates/register/menu_pc.html
@@ -70,11 +70,13 @@
         <a href="https://accounting.sophiagardens.org" target="_blank" class="white_color">会計資料</a>
       </div>
     </div>
+    {% comment %}
     <div class="column is-2">
       <div class="menubox has-text-centered">
         <a href="https://facility.sophiagardens.org/parking/fig/" target="_blank" class="white_color">駐車場空き状況</a>
       </div>
     </div>
+    {% endcomment %}
     <div class="column is-3">
       <div class="menubox has-text-centered">
         <a href="https://facility.sophiagardens.org" target="_blank" class="white_color">共用設備・修繕計画</a>
